name:                ccCell
version:             0.0.3
description:         Elementary cell automaton playground
homepage:            https://github.com/ccntrq/ccCell#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander 'ccntrq' Pankoff
maintainer:          ccntrq@screenri.de
copyright:           BSD3
category:            Math, Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Automaton
                     , Automaton.Snapshot
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels
  default-language:    Haskell2010

executable ccCell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ccCell
                     , JuicyPixels
                     , cmdargs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ccntrq/ccCell
